Kinda fixed single SystemListener copy bug: should fix the signal connection instead! (TODO) Added movement and collision system (with circle collision sample)! States are now fully managed by the manager. You can no longer use external state instances; TODO: add state transition condition and manage to solve multiple onMessage calls with the same message context (also including the corresponding state's message transition condition).

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Engine.hpp" />
     <ClInclude Include="Entities\Component\ComponentCollection.hpp" />
     <ClInclude Include="Entities\Component\ComponentCollectionIntersection.hpp" />
     <ClInclude Include="Entities\Component\ComponentView.hpp" />
