--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -92,28 +92,10 @@
     <ClInclude Include="Includes\Component\Render.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Includes\System\MouseControllerSystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Includes\System\KeyboardControllerSystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Includes\Component\MouseController.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Includes\Component\KeyboardController.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Includes\Component\Speed.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Includes\System\KinematicSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Includes\System\DebugSystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Includes\Message\GravityChangedMessage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Includes\System\CollisionDetectionSystem.h">
@@ -122,7 +104,25 @@
     <ClInclude Include="Includes\System\CollisionResolverSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Includes\Message\EntityCollisionMessage.h">
+    <ClInclude Include="Includes\System\CameraSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Component\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Message\Explosion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Component\Joystick.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\System\JoystickSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Message\Collision.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Message\CameraChanged.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
