--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -81,13 +81,13 @@
     <ClInclude Include="Signals\SignalConnection.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Engine.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Entities\Component\Message\ComponentAdded.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Entities\Component\Message\ComponentRemoved.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mathematics.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
