Added QuadTree data structure.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -148,6 +148,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Data\Quad.hpp" />
+    <ClInclude Include="Data\QuadNode.hpp" />
+    <ClInclude Include="Data\QuadShape.hpp" />
+    <ClInclude Include="Data\QuadTree.hpp" />
     <ClInclude Include="Entities\Component\Message\ComponentAdded.hpp" />
     <ClInclude Include="Entities\Component\ComponentCollection.hpp" />
     <ClInclude Include="Entities\Component\ComponentCollectionIntersection.hpp" />
@@ -161,9 +165,7 @@
     <ClInclude Include="Entities\Entity\EntityManager.hpp" />
     <ClInclude Include="Entities\System\System.hpp" />
     <ClInclude Include="Entities\System\SystemManager.hpp" />
-    <ClInclude Include="Mathematics\Geometry.hpp" />
-    <ClInclude Include="Mathematics\Shape.h" />
-    <ClInclude Include="Mathematics\Shape.hpp" />
+    <ClInclude Include="Geometry.hpp" />
     <ClInclude Include="Mathematics.hpp" />
     <ClInclude Include="Messages\MessageHook.hpp" />
     <ClInclude Include="Family.hpp" />
